# megakernel

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  pytest.ini  requirements.txt  results_sweep.csv
cmake/: DetectSIMD.cmake
include/: aligned_alloc.hpp  autotuner.h  conv_microkernels.hpp  engine.hpp  epilogue.hpp  fused_conv_chain.hpp  gemm.h  ir.hpp  mk_compiler.hpp  onnx_loader.hpp  regionizer.hpp  schedule.hpp  weight_packing.hpp
python/mk_cpu/: __init__.py
src/: autotuner.cpp  bindings.cpp  conv_microkernels_avx512.cpp  engine.cpp  fused_conv_chain.cpp  gemm.cpp  main.cpp  onnx_loader.cpp  regionizer.cpp  weight_packing.cpp
tests/: test_conv_chain.py
tests/old/: bench_runner.py  bench_single.py  sweep.py
tests/perf/: bench_runner.py  bench_single.py  conv.py
tests/scripts/: bench.sh  sweep_gemm.sh
tests/unit/: test_matmul.py  test_smoke.py
