[build-system]
requires = ["scikit-build-core", "pybind11", "cmake", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "mk-cpu"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[tool.scikit-build]
wheel.packages = ["python/mk_cpu"]

[tool.scikit-build.cmake]
build-type = "Release"

[tool.scikit-build.cmake.define]
ATTN_BUILD_PYTHON = "ON"
